# magicore-aas

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  linker.ld  riscv64im-unknown-none-elf.json
primitives/: Makefile  magicore_atomic.S
src/: device.rs  executor.rs  interrupt.S  interrupt.rs  io.rs  main.rs  polyfill.rs
src/driver/: clint.rs  critical_section.rs  mod.rs  timer.rs  uart.rs
