[package]
name = "magicore-aas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.8.0"
embassy = { path = "../embassy/embassy", features = ["nightly"] }
embedded-hal = "0.2.7"
phf = { version = "0.10", default-features = false, features = ["macros"] }
critical-section = { version = "0.2", features = ["custom-impl"] }
